--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   max-width: 32.5rem;
   border-radius: 2rem;
   background-color: var(--color-white);
-  margin: 5rem auto;
+  margin: 8rem auto;
   padding: 1.6rem;
   box-shadow: 0px 10px 21px 0px rgba(163, 163, 163, 0.5);
 }
@@ -53,4 +53,9 @@ body {
 .qr-card-description {
   text-align: center;
   padding: 0 1rem 3rem;
+}
+
+footer {
+  text-align: center;
+  font-size: 1rem;
 }
