--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
 }
 
 main {
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,7 +38,6 @@ main {
   max-width: 32.5rem;
   border-radius: 2rem;
   background-color: var(--color-white);
-  margin: 8rem auto;
   padding: 1.6rem;
   box-shadow: 0px 10px 21px 0px rgba(163, 163, 163, 0.5);
 }
@@ -59,9 +59,4 @@ main {
 .qr-card-description {
   text-align: center;
   padding: 0 1rem 3rem;
-}
-
-footer {
-  text-align: center;
-  font-size: 1rem;
 }
