--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
 }
 
 * {
@@ -23,42 +22,49 @@ html {
 
 body {
   font-family: Outfit, sans-serif;
-  font-size: 1.5rem;
+  font-size: 0.9375rem;
   color: var(--color-grayish-blue);
   line-height: 1.3;
   background-color: var(--color-light-gray);
 }
 
-main {
+body {
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .qr-card-wrapper {
-  max-width: 32.5rem;
-  border-radius: 2rem;
+  max-width: 20.25rem;
+  border-radius: 1.25rem;
   background-color: var(--color-white);
-  padding: 1.6rem;
+  padding: 1rem;
   box-shadow: 0px 10px 21px 0px rgba(163, 163, 163, 0.5);
 }
 
 .qr-code-image {
   max-width: 100%;
-  border-radius: 1rem;
+  border-radius: 0.625rem;
 }
 
 .qr-card-heading {
   color: var(--color-dark-blue);
-  font-size: 2.4rem;
+  font-size: 1.5rem;
   font-weight: 700;
   text-align: center;
-  margin: 2rem 0 1.5rem;
-  padding: 0 1rem;
+  margin: 1.25rem 0 1rem;
+  padding: 0 0.625rem;
 }
 
 .qr-card-description {
   text-align: center;
-  padding: 0 1rem 3rem;
+  padding: 0 0.625rem 1.875rem;
+}
+
+footer p {
+  font-size: 0.875rem;
+  text-align: center;
+  margin-top: 2.5rem;
 }
