--- a/style.css
+++ b/style.css
@@ -26,10 +26,8 @@ body {
   color: var(--color-grayish-blue);
   line-height: 1.3;
   background-color: var(--color-light-gray);
-}
-
-body {
-  height: 100vh;
+  
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
